databaseInterfaceAdjusted + modelClassesAdded